Fixing a break on the project box css, and fixing the slider button css

--- a/app/stylesheets/_projects.sass
+++ b/app/stylesheets/_projects.sass
@@ -64,14 +64,14 @@
       background-color: rgba(0,0,0,0.2)
       +border-bottom-left-radius(4px)
       +border-bottom-right-radius(4px)
-      padding: 10px
+      padding: 10px 0
       font-size: 11px
       .progress_bar
         font-size: 4px
         line-height: 12px
         width: 200px
       .progress_info
-        width: 200px
+        width: 210px
         margin: 0 auto
         ul
           +horizontal-list(4px)
