--- a/app/stylesheets/_slider.sass
+++ b/app/stylesheets/_slider.sass
@@ -2,6 +2,7 @@
   position: relative
 .navigation
   .prev,.next
+    font-family: "museo-500" !important
     position: absolute
     top: 172px
     color: #fff
@@ -32,3 +33,4 @@
     left: -32px
   .next
     right: -32px
+
